# CanvasEngine

./: .gitignore
Code/: CMakeLists.txt  main.cpp
Code/Include/: Engine.h
Code/Include/Core/Graphic/: Graphic.h  RenderData.h  Renderer.h
Code/Include/Core/Graphic/Assets/: MaterialAsset.h  MeshAsset.h  RenderTextureAsset.h  ShaderAsset.h  TextureAsset.h
Code/Include/Core/Graphic/AssetsLoader/: MeshLoader.h  ShaderLoader.h  TextureLoader.h
Code/Include/Core/Graphic/Core/: GraphicCore.h  GraphicOpenGLCore.h  RenderTexture.h
Code/Include/Core/Graphic/Core/OpenGL/: GraphicOpenGLCore.h  OpenGLGraphicCore.h  OpenGLMeshStorage.h  OpenGLRenderTextureStorage.h  OpenGLShaderStorage.h  OpenGLTextureStorage.h
Code/Include/Core/Graphic/Pipeline/: GraphicFeature.h  GraphicPipeline.h
Code/Include/Core/Graphic/Pipeline/Pipeline/: ForwardPipeline.h
Code/Include/Core/Graphic/Pipeline/Pipeline/ForwardFeatures/: OpaqueFeature.h  SkyboxFeature.h  TransparentFeature.h
Code/Include/Core/Graphic/RenderData/: CameraManager.h  LightManager.h  RendererManager.h
Code/Include/Core/Graphic/RenderData/Components/: Camera.h  Light.h  Renderer.h
Code/Include/Engine/: Renderer.h  TestAsset.cpp  TestAsset.h  Transform.cpp  Transform.h
Code/Include/Engine/Graphic/: TextureAsset.cpp  TextureAsset.h
Code/Include/Framework/: CustomPtr.h  CustomValue.h  GlobalSetting.h  SerializePtr.h  StaticInfo.cpp  StaticInfo.h
Code/Include/Framework/Assets/: AssetLog.h  AssetManager.h  CustomAsset.h
Code/Include/Framework/Scenes/: Component.h  CustomEntity.h  GameObject.h  Scene.h  SceneManager.cpp  SceneManager.h
Code/Include/General/: Cipher.h  Debug.h  IO.h  Map.h  Queue.h  Time.h
Code/Include/General/Container/: Deque.h  Map.h  Queue.h
Code/Include/General/Math/: Color.h  CommonMath.cpp  CommonMath.h
Code/Include/General/Tool/: Debug.h  IO.h  String.h
Code/Source/: AssetLog.cpp  AssetManager.cpp  Camera.cpp  CameraManager.cpp  Cipher.cpp  Color.cpp  CommonMath.cpp  Component.cpp  CustomAsset.cpp  CustomEntity.cpp  CustomPtr.cpp  CustomValue.cpp  Debug.cpp  Engine.cpp  ForwardPipeline.cpp  GameObject.cpp  GlobalSetting.cpp  Graphic.cpp  GraphicCore.cpp  GraphicFeature.cpp  GraphicOpenGLCore.cpp  GraphicPipeline.cpp  IO.cpp  Light.cpp  LightManager.cpp  MaterialAsset.cpp  MeshAsset.cpp  MeshLoader.cpp  OpaqueFeature.cpp  OpenGLGraphicCore.cpp  OpenGLMeshStorage.cpp  OpenGLRenderTextureStorage.cpp  OpenGLShaderStorage.cpp  OpenGLTextureStorage.cpp  RenderData.cpp  RenderTexture.cpp  RenderTextureAsset.cpp  RenderTextureDescribe.cpp  Renderer.cpp  RendererManager.cpp  (+12 more)
